Fix blogs headings / subheadings on mobile viewports

--- a/app/assets/stylesheets/dy7/_layout.less
+++ b/app/assets/stylesheets/dy7/_layout.less
@@ -60,10 +60,13 @@ h1 {
     > header {
       margin: 0 1em;
     }
-    > h2,
     > header > h2 {
       font-size: 1.4rem;
-      margin: 1.5em 1em 1em;
+      margin: 1.5em 0 1em;
+    }
+    > h2 {
+      font-size: 1.4rem;
+      margin: 1.5em (1em/1.4) 1em;
     }
     > p {
       font-size: (15/16rem);
